deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app-container
        image: 123456789.dkr.ecr.eu-west-1.amazonaws.com/aritra-eks-demo:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.1"
            memory: "128Mi"
